# nexus

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  justfile  pyproject.toml  pyrightconfig.json  start.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  langgraph-patterns.md
specs/: nexus-prd.md  nexus-tech-spec.md  nexus-ux-spec.md  tasks.md
src/nexus/: __init__.py  __main__.py  cache.py  config.py  resilience.py  runtime.py  stats.py
src/nexus/agents/: __init__.py  base.py  error_boundary.py  family_coordinator.py  logistics.py  meteorology.py  nutritional.py  objective.py  orchestrator.py  safety.py  save_plan.py  synthesizer.py
src/nexus/cli/: app.py  preflight.py
src/nexus/graph/: planner.py  runner.py
src/nexus/llm/: prompts.py  router.py
src/nexus/output/: filenames.py  html.py  markdown.py  renderer.py
src/nexus/state/: __init__.py  confidence.py  graph_state.py  helpers.py  reducers.py  schemas.py
src/nexus/templates/: base.html.j2  history.html.j2  index.html.j2  plan.html.j2  plan.md.j2  plan_minimal.html.j2  planning.html.j2  preflight.html.j2  setup.html.j2
src/nexus/tools/: interfaces.py  models.py  registry.py  sanitize.py
src/nexus/tools/providers/: coverage.py
src/nexus/web/: events.py  messages.py  progress.py  routes.py  schemas.py  server.py
tests/: conftest.py  test_config.py  test_resilience.py
tests/fixtures/: plan_snapshot.html  sample_profile.yaml
tests/fixtures/http/: google_restaurants.json  open_meteo_aqi.json  open_meteo_daylight.json  open_meteo_forecast.json  osrm_nearest.json  osrm_route.json  overpass_activities.json  yelp_restaurants.json
tests/test_agents/: test_logistics.py  test_meteorology.py  test_objective.py  test_orchestrator.py  test_safety.py  test_synthesizer.py
tests/test_cli/: test_preflight.py
tests/test_e2e/: test_full_plan.py  test_journeys.py
tests/test_graph/: test_checkpoint_persistence.py  test_consensus.py  test_routing.py
tests/test_llm/: test_router.py
tests/test_output/: test_html_render.py  test_output_quality.py
tests/test_state/: test_reducers.py  test_schemas.py
tests/test_tools/: test_providers.py
(+5 files in other folders)
